routine update
